--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Minecraft Perimeter and Area</title>
     <link href="minecraft.css" type="text/css" rel="stylesheet">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/minecraft.js" type="text/javascript"></script>
 </head>
 <body>
